--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -135,7 +135,7 @@
 
   - name: show images
     debug:
-      msg: "{{oci_images}}"
+      msg: "{{oci_images.images[0]}}"
     tags:
       - always
 
