--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -139,9 +139,16 @@
     tags:
       - always
 
+  # - name: filter query
+  #   debug:
+  #     var: oci_images.images | json_query("[?operating_system == 'Windows']")
+  #   tags:
+  #     - always
+
   - name: filter query
     debug:
-      var: oci_images.images | json_query("[?operating_system == 'Windows']")
+      var: "{{ item.display_name }}
+    loop: oci_images.images | selectattr('operating_system', 'equalto', 'Windows') | list"
     tags:
       - always
 
