--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -147,7 +147,7 @@
 
   - name: filter query
     debug:
-      var: "{{ item.display_name }}
+      var: "{{ item.display_name }}"
     loop: oci_images.images | selectattr('operating_system', 'equalto', 'Windows') | list"
     tags:
       - always
