--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -148,7 +148,7 @@
   - name: filter query
     debug:
       msg: "{{ item.display_name }}"
-    loop: "{{oci_images.images | selectattr('operating_system', 'equalto', 'Windows') | list}}"
+    loop: "{{oci_images.images | selectattr('operating_system', 'equalto', 'Canonical Ubuntu') | list}}"
     tags:
       - always
 
