--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -132,7 +132,7 @@
       compartment_id: "{{compartment_id}}"
       shape: "{{instance_shape}}"
       operating_system  : "Canonical Ubuntu"
-      # operating_system_version: "{{intance_os_version}}"
+      operating_system_version: "{{intance_os_version}}"
     register: oci_images
     tags:
       - always
