--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -623,5 +623,5 @@
         subnet_id: "{{ vm_subnet_id }}"
       metadata:
         ssh_authorized_keys: "{{ authorized_key }}"
-    with_items: "{{ private_vm_names }}
+    with_items: "{{ private_vm_names }}"
     register: result
