testing jenkins instnae
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -21,12 +21,15 @@
     ocpu: 1
     memory_in_gbs: 8
     private_vm_hdd: 60
+    public_vm_hdd: 60
     private_vm_names:
       - kp
       - dp
       - yarn
       - db
       - others
+    public_vm_names:
+      - jenkins
     private_containers:
       - private
       - artifacts
@@ -484,7 +487,9 @@
     tags:
       - network
       - k8s
-
+  - set_fact:
+      lb_subnet_id: "{{ result.subnet.id }}"
+      cacheable: yes
   # - name: Create Private Buckets
   #   oci_object_storage_bucket:
   #     namespace_name: "{{ namespace_name }}" 
@@ -603,7 +608,7 @@
   #   tags:
   #     - ocir  
 
-  - name: Launch an instance
+  - name: Launch private instance
     oci_compute_instance:
       availability_domain: "{{ availability_domain }}"
       compartment_id: "{{ compartment_id }}"
@@ -624,4 +629,27 @@
       metadata:
         ssh_authorized_keys: "{{ authorized_key }}"
     with_items: "{{ private_vm_names }}"
+    register: result
+
+  - name: Launch jenkins instance
+    oci_compute_instance:
+      availability_domain: "{{ availability_domain }}"
+      compartment_id: "{{ compartment_id }}"
+      name: "{{ item }}"
+      image_id: "{{ instance_image_id }}"
+      shape: "{{ instance_shape }}"
+      source_details:
+        boot_volume_size_in_gbs: "{{public_vm_hdd}}"
+        image_id: "{{ instance_image_id }}"
+        source_type: "image"
+      shape_config: 
+        ocpus: "{{ ocpu }}"
+        memory_in_gbs: "{{ memory_in_gbs }}"
+      create_vnic_details:
+        assign_public_ip: True
+        hostname_label: "{{ item }}"
+        subnet_id: "{{ lb_subnet_id }}"
+      metadata:
+        ssh_authorized_keys: "{{ authorized_key }}"
+    with_items: "{{ public_vm_names }}"
     register: result
