--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -608,6 +608,18 @@
   #   tags:
   #     - ocir  
 
+  - name: Create container_repository
+    oci_artifacts_container_repository:
+      compartment_id: "{{ compartment_id }}"
+      display_name: "{{repo_name}}/{{item}}"
+      is_public: false
+      readme:
+        content: "container registry for Sunbird deployment - {{item}} "
+        format: TEXT_MARKDOWN
+    with_items: "{{ repo_list }}"
+    tags:
+      - ocir      
+
   # - name: Launch private instance
   #   oci_compute_instance:
   #     availability_domain: "{{ availability_domain }}"
