--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -665,3 +665,10 @@
   #       ssh_authorized_keys: "{{ authorized_key }}"
   #   with_items: "{{ public_vm_names }}"
   #   register: result
+
+- name: Create user
+  oci_identity_user:
+    compartment_id: "{{compartment_id}}"
+    name: sunbirded-svc
+    description: sunbird ed service user
+    state: present
