--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -471,6 +471,15 @@
   - set_fact:
       vm_subnet_id: "{{ result.subnet.id }}"
       cacheable: yes
+      
+  - name: Create user
+    oci_identity_user:
+      compartment_id: "{{compartment_id}}"
+      name: sunbirded-svc
+      description: sunbird ed service user
+      state: present
+    tags:
+      - identity
 
   - name: Create a Subnet for LB
     oci_network_subnet:
