--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -12,6 +12,7 @@
     vcn_name: "SunbirdEd-VCN"
     vcn_dns_label: "sunbirded"
     compartment_id: "{{ lookup('env', 'COMPARTMENT_OCID') }}"
+    tenancy_id: "{{ lookup('env', 'OCI_TENANCY')}}"
     namespace_name: "{{ lookup('env', 'OSS_NAMESPACE') }}"
     geoip_licence_key: "{{ lookup('env', 'GEO_IP_LIC_KEY') }}"
     authorized_key: "{{ lookup('env', 'INSTANCE_PUBLIC_KEY') }}"
@@ -474,7 +475,7 @@
 
   - name: Create user
     oci_identity_user:
-      compartment_id: "{{compartment_id}}"
+      compartment_id: "{{tenancy_id}}"
       name: sunbirded-svc-test
       description: sunbird ed service user
       state: present
