--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -473,14 +473,6 @@
       vm_subnet_id: "{{ result.subnet.id }}"
       cacheable: yes
 
-  - name: Create user
-    oci_identity_user:
-      compartment_id: "{{tenancy_id}}"
-      name: sunbirded-svc-test
-      description: sunbird ed service user
-      state: present
-    tags:
-      - identity
 
   - name: Create a Subnet for LB
     oci_network_subnet:
@@ -676,3 +668,21 @@
   #   with_items: "{{ public_vm_names }}"
   #   register: result
 
+
+  - name: Create user
+    oci_identity_user:
+      compartment_id: "{{tenancy_id}}"
+      name: sunbirded-svc-test
+      description: sunbird ed service user
+      state: present
+    tags:
+      - identity
+
+  - name: Create group
+    oci_identity_user:
+      compartment_id: "{{tenancy_id}}"
+      name: sunbirded-svc-test-group
+      description: User group for Sunbird Service Users
+      state: present
+    tags:
+      - identity
