--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -679,7 +679,7 @@
       - identity
 
   - name: Create group
-    oci_identity_user:
+    oci_identity_group:
       compartment_id: "{{tenancy_id}}"
       name: sunbirded-svc-test-group
       description: User group for Sunbird Service Users
