--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -675,6 +675,7 @@
       name: sunbirded-svc-test
       description: sunbird ed service user
       state: present
+    register: result
     tags:
       - identity
 
@@ -690,6 +691,7 @@
       name: sunbirded-svc-test-group
       description: User group for Sunbird Service Users
       state: present
+    register: result
     tags:
       - identity
   - set_fact:
