--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -705,6 +705,7 @@
       user_id: "{{user_id}}"
       group_id: "{{group_id}}"
       compartment_id: "{{tenancy_id}}"
+      tenancy: "{{tenancy_id}}"
       state: present
     tags:
       - identity
