--- a/deploy/oci-provisioning.yaml
+++ b/deploy/oci-provisioning.yaml
@@ -721,23 +721,25 @@
     tags:
       - identity
 
-  - name: Create auth_token
-    oci_identity_auth_token:
-      # required
-      description: For sunbird ocir
-      user_id: "{{user_id}}"
-    register: result
-    tags:
-      - identity
-  - set_fact:
-      auth_token: "{{ result.auth_token.token }}"
-      cacheable: yes
-    tags:
-      - identity
+### Temporary disabled, as test login user doenst have the right privlieges
+  # - name: Create auth_token
+  #   oci_identity_auth_token:
+  #     # required
+  #     description: For sunbird ocir
+  #     user_id: "{{user_id}}"
+  #   register: result
+  #   tags:
+  #     - identity
+  # - set_fact:
+  #     auth_token: "{{ result.auth_token.token }}"
+  #     cacheable: yes
+  #   tags:
+  #     - identity
 
-  - name: Showing resources info
-    debug:
-      msg:
-        - OCIR auth token: "{{ auth_token }}"
-    tags:
-      - identity
+  # - name: Showing resources info
+  #   debug:
+  #     msg:
+  #       - OCIR auth token: "{{ auth_token }}"
+  #   tags:
+  #     - identity
+## Tempoary Disabled end
