updated prom version
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/ansible/roles/bootstrap_k8s/tasks/main.yml
+++ b/ansible/roles/bootstrap_k8s/tasks/main.yml
@@ -81,7 +81,7 @@
   shell: helm upgrade --install --atomic --timeout {{helm_install_timeout | d("10m")}} cnpg cnpg/cloudnative-pg --namespace cnpg-system --create-namespace  --wait
 
 - name: helm install prometheus
-  shell: helm upgrade --install --atomic --timeout {{helm_install_timeout | d("10m")}} prometheus-community prometheus-community/kube-prometheus-stack --namespace monitoring --create-namespace  --values /tmp/prometheus.yaml --wait
+  shell: helm upgrade --install --atomic --timeout {{helm_install_timeout | d("10m")}} prometheus-community prometheus-community/kube-prometheus-stack --namespace monitoring --create-namespace  --values /tmp/prometheus.yaml --wait --version "{{prometheus_chart_version}}"
 
 - name: Define alerts
   shell: kubectl apply -f /tmp/prom_rules.yaml
