--- a/helm_charts/nginx-ingress/templates/daemonset.yaml
+++ b/helm_charts/nginx-ingress/templates/daemonset.yaml
@@ -71,7 +71,9 @@ metadata:
 {{ toYaml .Values.service.annotations | indent 4 }}
 {{- end }}
 spec:
+{{- if eq .Values.service.type  "LoadBalancer" }}
   externalTrafficPolicy: Local
+{{- end }}
   selector:
     app: {{ .Chart.Name }}
   type: {{ .Values.service.type }}
