--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -1,14 +1,11 @@
-env: dev 
-namespace: "{{ env }}" 
+env: dev
+namespace: "{{ env }}"
 bootstrap_namespace: "{{ namespace }}"
-kubeconfig_path: /home/ubuntu/secrets/k8s.yaml
-domain_name: demo.sunbirdrc.app.oci
-oci_tenancy_ocid: ""
+kubeconfig_path: /home/ubuntu/istio-multicluster-setup/devops/istio-samples/multi-primary-diff-nw-oci/terraform/modules/oke/generated/oke_cluster1
+domain_name: istio.multi.sunbirdrc.app.oci
+nginx_public_ingress_type: ClusterIP   ### or LoadBalancer
+oci_tenancy_ocid: "ocid1.tenancy.oc1..aaaaaaaa"
 region: ""
-
-core_vault_dp_pgdb_password: "postgres"
-core_vault_postgres_password: "postgres"
-core_vault_postgres_username: "postgres"
 
 # The proxy key and crt values should be padded to the right by a couple of spaces 
 # Example:
@@ -18,73 +15,42 @@ core_vault_postgres_username: "postgres"
 #    UqvtIOY5lxlgU22+4BQbjMRN6NZn89AfWMUpRQOCoohPpTs0/JF+a20RI256gNkr
 #    yxm5BleKMv9dovAUjPElrdsWsBq9XOFDzN7GJnWpyB7oFYOoqrbRNrvL/dTP/op/
 #    -----END PRIVATE KEY-----
+
 ssl_site_key: |+
 
 ssl_site_crt: |+
 
+
 CERTIFICATE_PUBLIC_KEY: |+
+
 
 CERTIFICATE_PRIVATE_KEY: |+
 
-## PostgreSQL config
-postgres_replication_user_name: "{{ core_vault_postgres_username }}"
-postgres_password: "{{ core_vault_postgres_password }}"
-postgres_address_space: "{{groups['postgresql-master'][0].split(\".\")[0]}}.0.0.0/8"
-
-postgresql_hba_entries:
-  - { type: local, database: all, user: postgres, auth_method: peer }
-  - { type: local, database: all, user: all, auth_method: peer }
-  - { type: host, database: all, user: all, address: '127.0.0.1/32', auth_method: md5 }
-  - { type: host, database: all, user: all, address: '::1/128', auth_method: md5 }
-  - { type: host, database: replication, user: "{{ postgres_replication_user_name }}", address: '{{ postgres_address_space }}', auth_method: md5 }
-  - { type: host, database: all, user: all, address: '0.0.0.0/0', auth_method: md5 }
-
-postgres:
-  db_url: "{{ groups['postgres'][0] }}"
-  db_username: postgres
-  db_name: registry
-  db_password: "{{core_vault_dp_pgdb_password}}"
-  db_port: 5432
-  db_admin_user: postgres
-  db_admin_password: "{{core_vault_postgres_password}}"
-
-postgresql_users:
-  - name: postgres
-    login_password: "{{core_vault_dp_pgdb_password}}"
-    password: "{{core_vault_dp_pgdb_password}}"
-    db: registry
-    login_user: postgres
-    priv: "ALL"
-
-postgresql_databases:
-  - name: registry
-    login_password: "{{core_vault_dp_pgdb_password}}"
-    owner: "postgres"
-    login_user: postgres
-
-postgres_users_no_log: false
 
 sunbird_rc:
-  certificateapi_enabled: true
-  certificatesign_enabled: false
-  claim_ms_enabled: false
   elasticsearch_enabled: false
-  filestorage_enabled: false
-  keycloak_enabled: false
-  registry_enabled: false
 
 
 filestorage:
   minio_root_user: admin
   minio_root_password: admin1234
 
-admin_api_secret: "change.my.password"
+admin_api_secret: change.my.password
 
+### Applicable only if nginx_public_ingress_type: LoadBalancer
 nginx_ingress_service_annotations:
   service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
-  service.beta.kubernetes.io/oci-load-balancer-internal: "true"
-  service.beta.kubernetes.io/oci-load-balancer-subnet1: "ocid1.subnet.oc1.ap-mumbai-1.aaaaaaaa"
+  service.beta.kubernetes.io/oci-load-balancer-internal: "false"
+  service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10Mbps"
+  service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "100Mbps"
+  service.beta.kubernetes.io/oci-load-balancer-subnet1: "ocid1.subnet.oc1.adfalk"
 
-service_list:
-  - ceritificateapi
-  - certificatesign 
+
+postgress_db_host: postgres-cluster-rw.{{namespace}}
+postgres_connectionInfo_uri: "jdbc:postgresql://postgres-cluster-rw.{{namespace}}:5432/registry"
+postgres_connectionInfo_username: registry
+postgres_connectionInfo_password: admin134
+
+longhorn_default_replica_count: 2
+
+search_provider_name: ""
