updated minor chnages
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/ansible/roles/bootstrap_k8s/tasks/main.yml
+++ b/ansible/roles/bootstrap_k8s/tasks/main.yml
@@ -90,4 +90,4 @@
   shell: kubectl apply -f /tmp/grafana_dashboard.yaml
 
 - name: Create Postgres Cluster
-  shell: kubectl apply -f /tmp/postgres.yaml -n cnpg
+  shell: kubectl apply -f /tmp/postgres.yaml -n {{namespace}}
