--- a/private_repo/ansible/inv/dev/Core/secrets.yml
+++ b/private_repo/ansible/inv/dev/Core/secrets.yml
@@ -45,7 +45,7 @@ nginx_ingress_service_annotations:
   service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "100Mbps"
   service.beta.kubernetes.io/oci-load-balancer-subnet1: "ocid1.subnet.oc1.adfalk"
 
-
+create_postgres_db: true   ## keep the value true for cluster1 and false for cluster2
 postgress_db_host: postgres-cluster-rw.{{namespace}}
 postgres_connectionInfo_uri: "jdbc:postgresql://postgres-cluster-rw.{{namespace}}:5432/registry"
 postgres_connectionInfo_username: registry
