--- a/ansible/roles/bootstrap_k8s/tasks/main.yml
+++ b/ansible/roles/bootstrap_k8s/tasks/main.yml
@@ -19,6 +19,12 @@
     - cnpg
   ignore_errors: yes
 
+- name: Istio namespace labeling
+  shell: "kubectl label namespace {{ item }} istio-injection=enabled"
+  with_items:
+    - "{{ bootstrap_namespace.split(',') }}"
+  ignore_errors: yes
+
 - name: Creating docker secrets
   shell: "kubectl create secret docker-registry {{ imagepullsecrets }} --namespace {{ item }} --docker-server {{ vault_docker_registry_url }} --docker-username {{ vault_docker_registry_user }} --docker-password {{ vault_docker_registry_password }} --dry-run=client -o=yaml | kubectl apply -f -"
   when: imagepullsecrets|length > 0
@@ -91,3 +97,4 @@
 
 - name: Create Postgres Cluster
   shell: kubectl apply -f /tmp/postgres.yaml -n {{namespace}}
+  when: create_postgres_db
