added id service
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/ansible/deploy_core_service.yml
+++ b/ansible/deploy_core_service.yml
@@ -3,6 +3,7 @@
   gather_facts: no
   vars_files:
     - "{{inventory_dir}}/secrets.yml"
+    - "{{inventory_dir}}/vault-secrets.yml"
   environment:
     KUBECONFIG: "{{ kubeconfig_path }}"
     OCI_CLI_AUTH: instance_principal
